--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon ./src/index.ts",
+    "build": "tsc",
     "start": "tsc && node ./dist/index.js"
   },
   "repository": {
